client/src/modules/components/ReportRenderer/visualizations/DecisionTable/DecisionTable.scss
.DecisionTable {
  .view-drd,
  .powered-by-logo {
    display: none;
  }

  .hit.header {
    vertical-align: bottom;
  }

  .CustomCell,
  .hit.header,
  tfoot td {
    border: 1px solid lightgray;
  }

  .dmn-decision-table-container table thead {
    border-bottom: 0;

    tr:last-child th,
    .hit-policy,
    .annotation {
      border-bottom: 3px double #444;
    }
  }
}

.dark {
  .dmn-decision-table-container {
    color: inherit;

    .decision-table-properties {
      color: inherit;
      background-color: inherit;
    }

    .CustomCell,
    .hit.header,
    tfoot td {
      border: inherit;
    }
  }
}

